Bug fix: open notes not showing on penatonics and chords

--- a/src/features/guitar/head/tuning/InputTuning.module.css
+++ b/src/features/guitar/head/tuning/InputTuning.module.css
@@ -13,7 +13,7 @@
   border: 1px solid #777;
 }
 
-.input:global(.scaleKey) {
+.input:global(.root) {
   color: #000;
   background-color: #cbab58;
   border: 1px solid #777;
